Fix button text wrap. Add commas and */5 in score

--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -24,10 +24,11 @@ button:hover{
   font-size: .8em;
   width:360px;
   min-height: 100px;
-  white-space: nowrap;
+  line-height: 160%;
   margin: 10px;
   display: inline-block;
   padding: 10px;
+  float: left;
 }
 .answer-button:hover{
   opacity: 1;
